--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,3 +14,8 @@
 .userTable td{
     @apply border text-base text-center
 }
+
+/*scrollbar hidden*/
+.scrollbar-none::-webkit-scrollbar{
+    display: none;
+}
